Migration to Bootstrap 5

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon-180x180.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/chums.css">
     <link rel="stylesheet" href="/css/swatches-2020.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
