--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
         gtag('config', 'UA-3648826-6');
     </script>
     <script>CHUMS = {}; Chums = {}</script>
-    <script async src="https://b2b.chums.com/version.js"></script>
+    <script async src="/version.js"></script>
     <!-- refresh state when needed from https://b2b.chums.com/api/preload/state.js -->
-    <script async src="https://b2b.chums.com/api/preload/state.js"></script>
+    <script src="/api/preload/state.js"></script>
     <script async>
         if (window?.__PRELOADED_STATE__?.app) {
             window.__PRELOADED_STATE__.app.version = CHUMS.version.versionNo;
