--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,13 @@
 
         gtag('config', 'UA-3648826-6');
     </script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>CHUMS = {}; Chums = {}</script>
-    <script async src="/version.js"></script>
     <!-- refresh state when needed from https://b2b.chums.com/api/preload/state.js -->
     <script src="/api/preload/state.js"></script>
     <script async>
         if (window?.__PRELOADED_STATE__?.app) {
-            window.__PRELOADED_STATE__.app.version = CHUMS.version.versionNo;
+            window.__PRELOADED_STATE__.app.version = CHUMS.version?.versionNo;
         }
     </script>
 </head>
