--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
     <link rel="stylesheet" href="/css/swatches-2020.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3648826-6"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KMH9RBEF98" ></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'UA-3648826-6');
+        gtag('config', 'G-KMH9RBEF98');
     </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>CHUMS = {}; Chums = {}</script>
