--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,6 @@
 <div id="app"></div>
 <script async src="/vendors.js"></script>
 <script async src="/chums.js"></script>
-<script async src="/main.js"></script>
+<script async src="/client.js"></script>
 </body>
 </html>
