--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,9 @@
     </script>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+    <div class="alert alert-info">Loading Chums B2B</div>
+</div>
 <script async src="/vendors.js"></script>
 <script async src="/chums.js"></script>
 <script async src="/main.js"></script>
