chore: smaller change to revalidate caches.

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 <div id="app">
-    <div class="alert alert-info">Loading Chums B2B</div>
+    <div class="alert alert-info">Loading Chums B2B.</div>
 </div>
 <script async src="/vendors.js"></script>
 <script async src="/chums.js"></script>
