fix(b2b): created new page layout for b2b customer resources

--- a/public/content/2023-new-products.html
+++ b/public/content/2023-new-products.html
@@ -1,45 +1,55 @@
 <link rel="stylesheet" href="../css/2023-new-products.css"/>
 <div id="new-products">
-    <div class="section">
-        <h1>2023 Catalog</h1>
-        <hr class="hr-top">
-        <p> 2023 Product Display Catalog</p>
-        <a href="https://cdn.shopify.com/s/files/1/0093/8908/0661/files/Chums_Catalog_2023_Digital_Rev5.pdf?v=1675102079">
-            <button class="static-button">
-                Download Catalog
-            </button>
-        </a>
-        <div class="static-button">
-            <a href="https://www.dropbox.com/s/juhmfq126yd4pyx/Chums_Catalog_2023_Digital_Rev5_High_Res.pdf?dl=0">Click
-                Here </a>
-            for high-res version (larger file size).
+    <div class="container mt-5">
+        <div class="row g-2">
+            <div class="col-12 col-md-6">
+                <h1>2023 Catalog</h1>
+                <p> 2023 Product Display Catalog</p>
+                <div class="d-flex align-items-end">
+                    <a href="/pdf/catalogs/2023/Chums_Catalog_2023_Digital_Rev5.pdf">
+                        <button class="btn btn-secondary me-3">
+                            Download Catalog
+                        </button>
+                    </a>
+                    <div>
+                        <a class="no-icon" href="/pdf/catalogs/2023/Chums_Catalog_2023_Digital_Rev5_High_Res.pdf">Click
+                            Here </a>
+                        for high-res version (larger file size).
+                    </div>
+                </div>
+                <hr class="my-5"/>
+                <h1>40th Anniversary Product Bundle</h1>
+                <p>Chums 40th Anniversary Product Bundle for Wholesalers</p>
+                <a href="/pdf/catalogs/2023/40thAnniversaryOneSheetV5.pdf">
+                    <button class="btn btn-secondary">
+                        Get Info
+                    </button>
+                </a>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1>2023 Price List</h1>
+                <p>2023 Product & Display Pricelist</p>
+                <a href="/pdf/catalogs/2023/Chums_Wholesale_Price_List_2023_Digital_Rev3.pdf">
+                    <button class="btn btn-secondary">
+                        Download Price List
+                    </button>
+                </a>
+                <hr class="my-5"/>
+                <h1>2024 New Product Guide</h1>
+                <p>New Products and colors for 2024</p>
+                <a href="/pdf/catalogs/2023/Rev. 8.18.23 - 2024 New Product Cut Sheet.pdf">
+                    <button class="btn btn-secondary">
+                        Download New Product Guide
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
-    <hr class="hr-bottom"/>
-    <h1>40th Anniversary Product Bundle</h1>
-    <hr class="hr-top"/>
-    <p>Chums 40th Anniversary Product Bundle for Wholesalers</p>
-    <a href="https://cdn.shopify.com/s/files/1/0093/8908/0661/files/40thAnniversaryOneSheetV5.pdf?v=1679410403">
-        <button class="static-button">
-            Get Info
-        </button>
-    </a>
-    <hr class="hr-bottom"/>
-    <h1>2023 Price List</h1>
-    <hr class="hr-top"/>
-    <p>2023 Product & Display Pricelist</p>
-    <a href="https://cdn.shopify.com/s/files/1/0093/8908/0661/files/Chums_Wholesale_Price_List_2023_Digital_Rev3.pdf?v=1670002424">
-        <button class="static-button">
-            Download Price List
-        </button>
-    </a>
-    <hr class="hr-bottom"/>
-    <h1>2024 New Product Guide</h1>
-    <hr class="hr-top"/>
-    <p>New Products and colors for 2024</p>
-    <a href="https://cdn.shopify.com/s/files/1/0093/8908/0661/files/Rev._8.18.23_-_2024_New_Product_Cut_Sheet.pdf?v=1692638344">
-        <button class="static-button">
-            Download New Product Guide
-        </button>
-    </a>
+</div>
+<div>
+    <div class="d-flex align-items-center justify-content-center mt-5">
+        <a href="https://chums.com/pages/2023-products">
+            <button class="btn btn-outline-secondary ">Check Out Our Product Videos Here</button>
+        </a>
+    </div>
 </div>
