edit: removed useless class names

--- a/public/content/2023-new-products.html
+++ b/public/content/2023-new-products.html
@@ -12,7 +12,7 @@
                         </button>
                     </a>
                     <div>
-                        <a class="no-icon" href="/pdf/catalogs/2023/Chums_Catalog_2023_Digital_Rev5_High_Res.pdf">Click
+                        <a  href="/pdf/catalogs/2023/Chums_Catalog_2023_Digital_Rev5_High_Res.pdf">Click
                             Here </a>
                         for high-res version (larger file size).
                     </div>
