--- a/public/content/2023-new-products.html
+++ b/public/content/2023-new-products.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="../css/2023-new-products.css"/>
 <div id="new-products">
     <div class="container mt-5">
         <div class="row g-2">
@@ -6,50 +5,52 @@
                 <h1>2023 Catalog</h1>
                 <p> 2023 Product Display Catalog</p>
                 <div class="d-flex align-items-end">
-                    <a href="/pdf/catalogs/2023/Chums_Catalog_2023_Digital_Rev5.pdf">
+                    <form type="submit" action="https://b2b.chums.com/pdf/catalogs/2023/Chums_Catalog_2023_Digital_Rev5.pdf" name="Download Catalog PDF">
                         <button class="btn btn-secondary me-3">
                             Download Catalog
                         </button>
-                    </a>
-                    <div>
-                        <a  href="/pdf/catalogs/2023/Chums_Catalog_2023_Digital_Rev5_High_Res.pdf">Click
-                            Here </a>
-                        for high-res version (larger file size).
-                    </div>
+                    </form>
+                    <form type="submit" name="Download High Res Catalog PDF"  action="https://b2b.chums.com/pdf/catalogs/2023/Chums_Catalog_2023_Digital_Rev5_High_Res.pdf">
+                        <button class="btn btn-outline-secondary">
+                            Click Here for a high-res version (larger file size)
+                        </button>
+                    </form>
                 </div>
                 <hr class="my-5"/>
                 <h1>40th Anniversary Product Bundle</h1>
                 <p>Chums 40th Anniversary Product Bundle for Wholesalers</p>
-                <a href="/pdf/catalogs/2023/40thAnniversaryOneSheetV5.pdf">
+                <form type="submit" name="Download 40th Aniversary Product Bundle for Wholesalers PDF" action="https://b2b.chums.com/pdf/catalogs/2023/40thAnniversaryOneSheetV5.pdf">
                     <button class="btn btn-secondary">
                         Get Info
                     </button>
-                </a>
+                </form>
             </div>
             <div class="col-12 col-md-6">
                 <h1>2023 Price List</h1>
                 <p>2023 Product & Display Pricelist</p>
-                <a href="/pdf/catalogs/2023/Chums_Wholesale_Price_List_2023_Digital_Rev3.pdf">
+                <form type="submit" name="Download 2023 Price List PDF" action="https://b2b.chums.com/pdf/catalogs/2023/Chums_Wholesale_Price_List_2023_Digital_Rev3.pdf">
                     <button class="btn btn-secondary">
                         Download Price List
                     </button>
-                </a>
+                </form>
                 <hr class="my-5"/>
                 <h1>2024 New Product Guide</h1>
                 <p>New Products and colors for 2024</p>
-                <a href="/pdf/catalogs/2023/Rev. 8.18.23 - 2024 New Product Cut Sheet.pdf">
+                <form type='submit' name="Download 2024 New Product Guide PDF" action="https://b2b.chums.com/pdf/catalogs/2023/Rev. 8.18.23 - 2024 New Product Cut Sheet.pdf">
                     <button class="btn btn-secondary">
                         Download New Product Guide
                     </button>
-                </a>
+                </form>
             </div>
         </div>
     </div>
 </div>
 <div>
+    <hr class="my-5"/>
     <div class="d-flex align-items-center justify-content-center mt-5">
         <a href="https://chums.com/pages/2023-products">
             <button class="btn btn-outline-secondary ">Check Out Our Product Videos Here</button>
         </a>
     </div>
 </div>
+
