fix(2023-Products): open product videos links to open in _blank

--- a/public/content/2023-new-products.html
+++ b/public/content/2023-new-products.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-12 col-md-6">
                 <h1>2023 Price List</h1>
-                <p>2023 Product & Display Pricelist</p>
+                <p>2023 Product & Display Price List</p>
                 <form type="submit" name="Download 2023 Price List PDF" action="https://b2b.chums.com/pdf/catalogs/2023/Chums_Wholesale_Price_List_2023_Digital_Rev3.pdf">
                     <button class="btn btn-secondary">
                         Download Price List
@@ -48,7 +48,7 @@
 <div>
     <hr class="my-5"/>
     <div class="d-flex align-items-center justify-content-center mt-5">
-        <a href="https://chums.com/pages/2023-products">
+        <a href="https://chums.com/pages/2023-products" target="_blank">
             <button class="btn btn-outline-secondary ">Check Out Our Product Videos Here</button>
         </a>
     </div>
