fix: migrate swatches to common swatch files @ https://github.com/ChumsInc/b2b-swatches.git

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/chums.css">
-    <link rel="stylesheet" href="/css/swatches-2020.css" />
+    <link rel="stylesheet" href="https://b2b.chums.com/b2b-swatches/swatches.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KMH9RBEF98" ></script>
