--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:wght@100;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <!--    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">-->
-    <link rel="stylesheet" href="/css/chums.css">
+    <link rel="stylesheet" href="/css/chums-b2b.css">
     <link rel="stylesheet" href="https://b2b.chums.com/b2b-swatches/swatches.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
