--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/images/icons/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon-180x180.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:wght@100;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <!--    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">-->
@@ -34,8 +34,7 @@
         gtag('config', 'G-KMH9RBEF98');
         window.Chums.gtagID = 'G-KMH9RBEF98';
     </script>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <!-- refresh state when needed from https://b2b.chums.com/api/preload/state.js -->
+    <script src="https://accounts.google.com/gsi/client" async></script>
     <script async>
         if (window?.__PRELOADED_STATE__?.app) {
             window.__PRELOADED_STATE__.app.version = CHUMS.version?.versionNo;
